# hord_watcher

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  justfile
.github/workflows/: docker-image.yml  master-build.yaml  nix-build.yaml  release-build.yaml
hord-watcher-chart/: Chart.yaml  values.yaml
hord-watcher-chart/templates/: NOTES.txt  _helpers.tpl  cluster_role.yaml  cluster_role_binding.yaml  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
src/: app_config.rs  events.rs  main.rs
