[package]
name = "hord_watcher"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "debuginfo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["macros"] }
config = "0.13.3"
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_23"] }
kube = { version = "0.86.0", default-features = false, features = ["rustls-tls","client", "runtime"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
