[package]
name = "hord_watcher"
version = "0.2.5"
edition = "2021"


[profile.release]
strip = "debuginfo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["macros"] }
config = "0.14.0"
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["v1_26"] }
kube = { version = "0.91.0", default-features = false, features = ["rustls-tls","client", "runtime"] }
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
