[package]
name = "hord_watcher"
version = "0.2.5"
edition = "2021"


[profile.release]
strip = "debuginfo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4" }
config = "0.15.6"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
kube = { version = "2.0.1", features = [ "runtime" ] }
serde = { version = "1.0.226", features = [ "derive" ] }
tokio = { version = "1.47.1", features = [ "rt-multi-thread", "time", "sync", "macros" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
